# waterpixels

./: .gitignore  CMakeLists.txt  README.md
Images/: landscape.ppm  landscape_CIELAB.ppm  watershed.ppm
images/: Peyto_Lake_Panorama.ppm
include/waterpixels/: config.hpp  utils.hpp  waterpixels.hpp
src/: main.cpp  markers.cpp  markers.hpp  utils.cpp  utils.hpp
src/waterpixels/: utils.cpp  waterpixels.cpp
